added architecture for css and more frontend modifications

--- a/web_project/templates/web_project/dashboard.html
+++ b/web_project/templates/web_project/dashboard.html
@@ -1,12 +1,12 @@
 {% extends 'web_project/main.html' %}
-{% include 'web_project/status.html' %}
-
 
 {% block content %}
 
+{% include 'web_project/status.html' %}
+
 <br>
     <div class="row">
-        <div class="col-md-7">
+        <div class="col-md">
             <h5>LAST 5 ORDERS</h5>
             <hr>
             <div class="card card-body">
