--- a/web_project/templates/web_project/main.html
+++ b/web_project/templates/web_project/main.html
@@ -1,29 +1,16 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html>
     <head>
         <title>CRM</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
-        <style>
-
-            body{
-                background-color: #ebeff5;
-            }
-            #total-orders{
-                background-color: #4cb4c7;
-            }
-            #orders-delivered{
-                background-color: #7abecc;
-            }
-            #orders-pending{
-                background-color: #7CD1C0;
-            }
-        </style>
+        <link rel="stylesheet" type="text/css" href="{% static '/css/main.css' %}">
     </head>
     <body>
 
         {% include 'web_project/navbar.html' %}
-        
+
         {% block content %}
         
         
