--- a/web_project/templates/web_project/status.html
+++ b/web_project/templates/web_project/status.html
@@ -8,13 +8,13 @@
                     <h5 class="card-title">Total Orders</h5>
                 </div>
                 <div class="card-body">
-                    <h3 class="card-title"></h3>
+                    <h3 class="card-title">{{total_orders}}</h3>
                 </div>
             </div>
         </div>
     </div>
     
-    <div class="col">
+    <!-- <div class="col">
         <div class="col-md">
             <div class="card text-center text-white mb-3" id="orders-delivered">
                 <div class="card-header">
@@ -38,5 +38,5 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 </div>
