--- a/web_project/templates/web_project/navbar.html
+++ b/web_project/templates/web_project/navbar.html
@@ -9,7 +9,7 @@
           <a class="nav-link" href="#">Dashboard</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Products</a>
+          <a class="nav-link" href="{% url 'products' %}">Products</a>
         </li>
       </ul>
     </div>
